; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/gcc/extr_diagnostic.c_default_diagnostic_starter.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/gcc/extr_diagnostic.c_default_diagnostic_starter.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.TYPE_4__*, i32*)* @default_diagnostic_starter to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @default_diagnostic_starter(%struct.TYPE_4__* %0, i32* %1) #0 {
  %3 = alloca %struct.TYPE_4__*, align 8
  %4 = alloca i32*, align 8
  store %struct.TYPE_4__* %0, %struct.TYPE_4__** %3, align 8
  store i32* %1, i32** %4, align 8
  %5 = load %struct.TYPE_4__*, %struct.TYPE_4__** %3, align 8
  %6 = call i32 @diagnostic_report_current_function(%struct.TYPE_4__* %5)
  %7 = load %struct.TYPE_4__*, %struct.TYPE_4__** %3, align 8
  %8 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %7, i32 0, i32 0
  %9 = load i32, i32* %8, align 4
  %10 = load i32*, i32** %4, align 8
  %11 = call i32 @diagnostic_build_prefix(i32* %10)
  %12 = call i32 @pp_set_prefix(i32 %9, i32 %11)
  ret void
}

declare dso_local i32 @diagnostic_report_current_function(%struct.TYPE_4__*) #1

declare dso_local i32 @pp_set_prefix(i32, i32) #1

declare dso_local i32 @diagnostic_build_prefix(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
